---------------------------------------------------------------------------------------------------
Version: 2.2.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.2.1
Date: 2025-02-14
  Bugfixes:
    - Fixed crash when working with blueprints / copy-paste
---------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: 2025-02-13
  Changes:
    - Initial port to Factorio 2.0
    - Only items and fluids will be auto-converted to negative numbers.
---------------------------------------------------------------------------------------------------
Version: 2.1.5
Date: 2024-09-19
  Bugfixes:
    - Allow virtual signals to be used in the Network Description panel. (#56)
---------------------------------------------------------------------------------------------------
Version: 2.1.4
Date: 2023-10-29
  Changes:
    - Add README file, update documentation, and update screenshots
---------------------------------------------------------------------------------------------------
Version: 2.1.3
Date: 2023-10-29
  Bugfixes:
    - Fixed crash in blueprinting workaround code that appears when closing various GUIs.
---------------------------------------------------------------------------------------------------
Version: 2.1.2
Date: 2023-10-29
  Bugfixes:
    - Improved styling around the network configuration panel
    - Fixed stamping blueprint over existing combinator would not update "extra" data used
      for UI display. (#49)
    - Fixed some instances of "Select new contents" for blueprints.
      Note: You can only use select new contents when the blueprint is in the players inventory.
            If the blueprint is in the blueprint library when you "Select new contents" the
            blueprint will be broken.  See: https://forums.factorio.com/viewtopic.php?f=182&t=88100