@@ -112,4 +112,4 @@ ltnc-disable-built-combinators-none=Neither Requester nor Provider will be force
 ltnc-disable-built-combinators-requester=The Requester service will be disabled on all new combinators.  This will disable the Requester service in blueprinted combinators even if it is enabled in the blueprint.\n\n[color=red]Note:[/color] Disabled means that a high Request Threshold will be set on the combinator.
 ltnc-disable-built-combinators-provider=The Provider service will be disabled on all new combinators.  This will disable the Provider service in blueprinted combinators even if it is enabled in the blueprint.\n\n[color=red]Note:[/color] Disabled means that a high Provide Threshold will be set on the combinator.
 ltnc-disable-built-combinators-all=Both the Requester and Provider services will be forced to a disabled state.  This will override settings in blueprinted combinators.\n\n[color=red]Note:[/color] Disabled means that high Request and Provide Thresholds will be set on the combinator.
-ltnc-disable-built-combinators-off=Combinators will be placed in a powers off state, Thresholds will not be adjusted.
+ltnc-disable-built-combinators-off=Combinators will be placed in a powered off state, Thresholds will not be adjusted.
